analysis/spring-framework/step_1/logs/8913-676282c.log
:buildSrc:compileJava UP-TO-DATE
:buildSrc:compileGroovy
:buildSrc:processResources
:buildSrc:classes
:buildSrc:jar
:buildSrc:assemble
:buildSrc:compileTestJava UP-TO-DATE
:buildSrc:compileTestGroovy UP-TO-DATE
:buildSrc:processTestResources UP-TO-DATE
:buildSrc:testClasses UP-TO-DATE
:buildSrc:test UP-TO-DATE
:buildSrc:check UP-TO-DATE
:buildSrc:build
:assemble
:build
:spring-core:cglibRepackJar
:spring-core:compileJava
:spring-core:processResources UP-TO-DATE
:spring-core:classes
:spring-core:objenesisRepackJar
:spring-core:jar
:spring-beans:compileJava
:spring-beans:processResources
:spring-beans:classes
:spring-beans-groovy:compileJava SKIPPED
:spring-beans-groovy:compileGroovywarning: [options] bootstrap class path not set in conjunction with -source 1.6
1 warning

:spring-beans-groovy:processResources UP-TO-DATE
:spring-beans-groovy:classes
:spring-beans:jar
:spring-aop:compileJava
:spring-aop:processResources
:spring-aop:classes
:spring-aop:jar
:spring-aop:sourcesJar
:spring-aop:assemble
:spring-aop:build
:spring-expression:compileJava
:spring-expression:processResources UP-TO-DATE
:spring-expression:classes
:spring-expression:jar
:spring-instrument:compileJava
:spring-instrument:processResources UP-TO-DATE
:spring-instrument:classes
:spring-instrument:jar
:spring-context:compileJava
:spring-context:compileGroovy UP-TO-DATE
:spring-context:processResources
:spring-context:classes
:spring-context:jar
:spring-tx:compileJava
:spring-tx:processResources
:spring-tx:classes
:spring-tx:jar
:spring-jdbc:compileJava
:spring-jdbc:processResources
:spring-jdbc:classes
:spring-jdbc:jar
:spring-context-support:compileJava
:spring-context-support:processResources
:spring-context-support:classes
:spring-context-support:jar
:spring-oxm:compileJava
:spring-oxm:processResources
:spring-oxm:classes
:spring-oxm:jar
:spring-web:compileJava
:spring-web:processResources
:spring-web:classes
:spring-web:jar
:spring-orm:compileJava
:spring-orm:processResources UP-TO-DATE
:spring-orm:classes
:spring-orm-hibernate4:compileJava
:spring-orm-hibernate4:processResources UP-TO-DATE
:spring-orm-hibernate4:classes
:spring-orm:jar
:spring-aspects:compileJava
:spring-aspects:processResources
:spring-aspects:classes
:spring-aspects:jar
:spring-aspects:sourcesJar
:spring-aspects:assemble
:spring-aspects:build
:spring-beans:sourcesJar
:spring-beans:assemble
:spring-beans:build
:spring-beans-groovy:jar SKIPPED
:spring-beans-groovy:sourcesJar SKIPPED
:spring-beans-groovy:assemble
:spring-beans-groovy:build
:spring-build-src:assemble UP-TO-DATE
:spring-build-src:build
:spring-context:sourcesJar
:spring-context:assemble
:spring-context:build
:spring-context-support:sourcesJar
:spring-context-support:assemble
:spring-context-support:build
:spring-core:sourcesJar
:spring-core:assemble
:spring-core:build
:spring-expression:sourcesJar
:spring-expression:assemble
:spring-expression:build
:spring-framework-bom:assemble UP-TO-DATE
:spring-framework-bom:build
:spring-instrument:sourcesJar
:spring-instrument:assemble
:spring-instrument:build
:spring-instrument-tomcat:compileJava
:spring-instrument-tomcat:processResources UP-TO-DATE
:spring-instrument-tomcat:classes
:spring-instrument-tomcat:jar
:spring-instrument-tomcat:sourcesJar
:spring-instrument-tomcat:assemble
:spring-instrument-tomcat:build
:spring-jdbc:sourcesJar
:spring-jdbc:assemble
:spring-jdbc:build
:spring-messaging:compileJava
:spring-messaging:processResources UP-TO-DATE
:spring-messaging:classes
:spring-messaging:jar
:spring-jms:compileJava
:spring-jms:processResources
:spring-jms:classes
:spring-jms:jar
:spring-jms:sourcesJar
:spring-jms:assemble
:spring-jms:build
:spring-messaging:sourcesJar
:spring-messaging:assemble
:spring-messaging:build
:spring-orm:sourcesJar
:spring-orm:assemble
:spring-orm:build
:spring-orm-hibernate4:jar SKIPPED
:spring-orm-hibernate4:sourcesJar SKIPPED
:spring-orm-hibernate4:assemble
:spring-orm-hibernate4:build
:spring-oxm:sourcesJar
:spring-oxm:assemble
:spring-oxm:build
:spring-webmvc:compileJava/home/ubuntu/bugs/spring-framework/spring-webmvc/src/main/java/org/springframework/web/servlet/mvc/method/annotation/ListenableFutureReturnValueHandler.java:60: error: local variable deferredResult is accessed from within inner class; needs to be declared final
				deferredResult.setResult(result);
				^
/home/ubuntu/bugs/spring-framework/spring-webmvc/src/main/java/org/springframework/web/servlet/mvc/method/annotation/ListenableFutureReturnValueHandler.java:64: error: local variable deferredResult is accessed from within inner class; needs to be declared final
				deferredResult.setErrorResult(ex);
				^
2 errors
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':spring-webmvc:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 49.484 secs
